manifests/api-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  # labels:
  #   app: weather-api
  name: weather-api
spec:
  replicas: 2
  selector:
    matchLabels:
      app: weather-api
  template:
    metadata:
      labels:
        app: weather-api
      annotations:
        prometheus.io/scrape: "true"
        prometheus.io.scheme: "http"
        prometheus.io/path: "/metrics"
        prometheus.io/port: "8080"
    spec:
      containers:
        - name: weather-api
          image: jbadenhorst/weather-api:latest
          ports:
            - containerPort: 8080
      restartPolicy: Always
