manifests/api-service.yaml
apiVersion: v1
kind: Service
metadata:
  # labels:
  #   app: weather-api
  name: weather-api-service
spec:
  ports:
    - port: 8080
      targetPort: 5000
  selector:
    app: weather-api-pod
  type: ClusterIP
