manifests/postgres.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: "postgres"
  namespace: "default"
  labels:
    app: "postgres"
spec:
  replicas: 1
  selector:
    matchLabels:
      app: postgres
  template:
    metadata:
      labels:
        app: postgres
    spec:
      volumes:
        - name: postgres-storage
          persistentVolumeClaim:
            claimName: postgres-pvc
      containers:
        - name: postgres
          image: postgres:14-alpine
          ports:
            - containerPort: 5432
          volumeMounts:
            - name: postgres-storage
              mountPath: /var/lib/postgresql/data
---
apiVersion: v1
kind: Service
metadata:
  name: postgres-service
spec:
  selector:
    app: postgres
  ports:
    - port: 5432
      name: web
  type: ClusterIP

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pg-exporter
spec:
  replicas: 1
  selector:
    matchLabels:
      app: pg-exporter
  template:
    metadata:
      labels:
        app: pg-exporter
    spec:
      containers:
        - name: pg-exporter
          image: wrouesnel/postgres_exporter
          ports:
            - containerPort: 9187
---
apiVersion: v1
kind: Service
metadata:
  name: pg-exporter-service
spec:
  selector:
    app: pg-exporter
  ports:
    - name: web
      port: 9187
      targetPort: 9187
