manifests/api-ingress.yaml
apiVersion: v1
kind: Ingress
metadata:
  name: weather-api-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
    - host: justadomain.xyz
      http:
        paths:
          - pathType: Prefix
            path: /
            backend:
              service:
                name: weather-api-service
                port:
                  number: 8080
