manifests/monitoring-ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: prometheus-ingress
  namespace: monitoring
spec:
  tls:
    - hosts:
        - prometheus.<DOMAIN>
      secretName: prometheus-app-tls
  ingressClassName: nginx
  rules:
    - host: prometheus.<DOMAIN>
      http:
        paths:
          - pathType: Prefix
            path: /
            backend:
              service:
                name: prometheus-kube-prometheus-prometheus
                port:
                  number: 9090
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: grafana-ingress
  namespace: monitoring
spec:
  tls:
    - hosts:
        - grafana.<DOMAIN>
      secretName: grafana-app-tls
  ingressClassName: nginx
  rules:
    - host: grafana.<DOMAIN>
      http:
        paths:
          - pathType: Prefix
            path: /
            backend:
              service:
                name: prometheus-grafana
                port:
                  number: 80
